--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -4,12 +4,17 @@ $color-three: #de53f4;
 $color-four: #e5e5e5; // Background
 $color-five: #e1e1e1; // Searchbar
 
+$color-containerOne: #2e2e2e;
+$color-containerTwo: #3a3a3a;
+
 $fontSize-one: 20px;
-$fontSize-two: 26px;
+$fontSize-two: 24px;
+$fontSize-three: 52px;
 
 $font-familyOne: 'Lato', sans-serif;
 $font-familyTwo: 'Merriweather', serif;
 $font-familyThree: 'Oswald', sans-serif;
 
 
-$letter-space: 1.2px;
+$letter-spaceOne: 1.2px;
+$letter-spaceTwo: 3.5px;
