'Updated hero section'

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -10,11 +10,12 @@ $color-containerTwo: #3a3a3a;
 $fontSize-one: 20px;
 $fontSize-two: 24px;
 $fontSize-three: 52px;
+$fontSize-four: 32px;
 
 $font-familyOne: 'Lato', sans-serif;
 $font-familyTwo: 'Merriweather', serif;
 $font-familyThree: 'Oswald', sans-serif;
 
 
-$letter-spaceOne: 1.2px;
+$letter-spaceOne: 1.4px;
 $letter-spaceTwo: 3.5px;
