'Updated hero section'

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -11,6 +11,7 @@ $fontSize-one: 20px;
 $fontSize-two: 24px;
 $fontSize-three: 52px;
 $fontSize-four: 32px;
+$fontSize-five: 18px;
 
 $font-familyOne: 'Lato', sans-serif;
 $font-familyTwo: 'Merriweather', serif;
