--- a/scss/_herosection.scss
+++ b/scss/_herosection.scss
@@ -1,6 +1,3 @@
-@import 'config';
-// @import 'card';
-
 .hero {
     height: auto;
     width: 100%;
@@ -52,45 +49,42 @@
                 width: 570px;
                 font-family: $font-familyThree; 
                 margin: .5rem .5rem;
-
-                .hero-overlay {
-                    position: absolute; 
-                    width: 100%;
-                    height: inherit;
-                    transition: .4s ease;
-                    opacity: 0;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;    
-                    
-                    .hero-btn {
-                        // z-index: 1;
-                        padding: 1rem 4rem;
-                        cursor: pointer;
-                        opacity:1;
-                        font-size: $fontSize-one;
-                        letter-spacing: $letter-spaceTwo;
-                        font-family: $font-familyOne;
-                        text-transform: uppercase;
-                        font-weight: bold;
-                        color: $color-three;
-                        border: 2px solid $color-three;
-                        background-color: $color-containerOne;
-                    }
-                }
-
-                .hero-overlay:hover {
-                    opacity: .6;
-                    background-color: $color-one;
-                }
                 
-
                 .hero-img {
                     height: 500px;
                     text-transform: uppercase;
                     position: relative;
                     transition: .5s ease;
-                    
+
+                    .hero-overlay {
+                        background-color: gray;
+                        position: absolute; 
+                        width: 100%;
+                        height: inherit;
+                        transition: .4s ease;
+                        opacity: 0;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;    
+                        
+                        .hero-link {
+                            // z-index: 1;
+                            padding: 1rem 4rem;
+                            cursor: pointer;
+                            font-size: $fontSize-one;
+                            letter-spacing: $letter-spaceTwo;
+                            font-family: $font-familyOne;
+                            text-transform: uppercase;
+                            font-weight: bold;
+                            border: 2px solid $color-three;
+                            background-color: $color-containerOne;
+                        }
+                    }
+
+                    .hero-overlay:hover {
+                        opacity: 1;
+                    }
+
                     img {
                         height: 100%;
                         width: 570px; 
@@ -103,7 +97,6 @@
                     display: flex;
                     align-items: center;
                     justify-content: space-between;
-                    // padding-top: ;
                     padding-left: 1.5rem;
                     font-size: $fontSize-five;
                     text-transform: uppercase;
