--- a/scss/_herosection.scss
+++ b/scss/_herosection.scss
@@ -57,7 +57,6 @@
                     transition: .5s ease;
 
                     .hero-overlay {
-                        background-color: gray;
                         position: absolute; 
                         width: 100%;
                         height: inherit;
@@ -82,6 +81,7 @@
                     }
 
                     .hero-overlay:hover {
+                        // background-color: gray;
                         opacity: 1;
                     }
 
