--- a/scss/style.css
+++ b/scss/style.css
@@ -51,7 +51,6 @@
   transition: 0.5s ease;
 }
 .hero .hero-container .hero-bottom .hero-card .hero-img .hero-overlay {
-  background-color: gray;
   position: absolute;
   width: 100%;
   height: inherit;
@@ -121,8 +120,16 @@
 }
 
 footer {
-  height: 60vh;
-  background-color: #2e2e2e;
+  height: 750px;
+  background-color: #e5e5e5;
+}
+footer .footer-container {
+  height: 700px;
+  position: relative;
+}
+footer .footer-container img {
+  height: 100%;
+  width: 100%;
 }
 
 *, *::before, *::after {
