--- a/scss/style.css
+++ b/scss/style.css
@@ -125,7 +125,17 @@ footer {
 }
 footer .footer-container {
   height: 700px;
-  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #de53f4;
+}
+footer .footer-container .footer-newsletter {
+  background-color: #000;
+  opacity: 0.7;
+  position: absolute;
+  height: 400px;
+  width: 1000px;
 }
 footer .footer-container img {
   height: 100%;
@@ -208,7 +218,7 @@ body .navbar .navbar-login {
   align-items: center;
   padding: 0 5rem 0 1rem;
 }
-body .navbar .navbar-login button {
+body .navbar .navbar-login a {
   border: none;
   cursor: pointer;
   background-color: #de53f4;
@@ -218,7 +228,7 @@ body .navbar .navbar-login button {
   font-family: "Oswald", sans-serif;
   letter-spacing: 1.4px;
 }
-body .navbar .navbar-login button:hover {
+body .navbar .navbar-login a:hover {
   transition: all 0.3s ease;
   color: #000;
 }
