--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,3 +1,5 @@
+@import 'config';
+
 footer {
     height: 750px;
     background-color: $color-four;
@@ -11,10 +13,45 @@ footer {
 
         .footer-newsletter {
             background-color: $color-two;
-            opacity: .7;
+            // opacity: .7;
             position: absolute;
-            height: 400px;
-            width:1000px;
+            height: 350px;
+            width:850px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+
+            .footer-signup {
+                color: $color-one;
+                text-transform: uppercase;
+                font-family: $font-familyThree;
+                letter-spacing: $letter-spaceTwo;
+                font-size: $fontSize-two;
+            }
+
+            .footer-update {
+                font-size: $fontSize-one;
+                font-style: italic;
+                font-family: $font-familyTwo;
+                letter-spacing: $letter-spaceOne;
+                padding: .5rem 0 1rem 0;
+            }
+
+            .footer-link {
+                padding: 2rem;
+                font-size: $fontSize-one;
+
+                a {
+                    font-family: $font-familyThree;
+                    text-transform: uppercase;
+                    text-decoration: none;
+                    color: $color-one;
+                    letter-spacing: $letter-spaceOne;
+                    border: 1px solid $color-one;
+                    padding: .5rem 5rem;
+                }
+            }
         }
 
         img {
