--- a/scss/style.css
+++ b/scss/style.css
@@ -132,10 +132,40 @@ footer .footer-container {
 }
 footer .footer-container .footer-newsletter {
   background-color: #000;
-  opacity: 0.7;
   position: absolute;
-  height: 400px;
-  width: 1000px;
+  height: 350px;
+  width: 850px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+footer .footer-container .footer-newsletter .footer-signup {
+  color: #fff;
+  text-transform: uppercase;
+  font-family: "Oswald", sans-serif;
+  letter-spacing: 3.5px;
+  font-size: 24px;
+}
+footer .footer-container .footer-newsletter .footer-update {
+  font-size: 20px;
+  font-style: italic;
+  font-family: "Merriweather", serif;
+  letter-spacing: 1.4px;
+  padding: 0.5rem 0 1rem 0;
+}
+footer .footer-container .footer-newsletter .footer-link {
+  padding: 2rem;
+  font-size: 20px;
+}
+footer .footer-container .footer-newsletter .footer-link a {
+  font-family: "Oswald", sans-serif;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #fff;
+  letter-spacing: 1.4px;
+  border: 1px solid #fff;
+  padding: 0.5rem 5rem;
 }
 footer .footer-container img {
   height: 100%;
